# safse

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: pytest.yml
configs/: species_priors.yaml  species_priors_by_code.yaml
data/: folds-w-meta.pkl
notebooks/: classify.ipynb  combined-model.ipynb  estimate.ipynb  import-example-deleteme.ipynb
notebooks/models/: classifier.keras
src/fish_classifier/: data.py  model.py  train.py
