[project]
name = "safse"
version = "1.0.0"
description = "Species-Aware Fish Length Estimation from Images"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "ECE228 Team 72" }]
dependencies = [
  "ipykernel>=7.2.0",
  "matplotlib>=3.10.9",
  "numpy",
  "opencv-python",
  "pandas",
  "pillow>=12.2.0",
  "pytest",
  "scikit-learn>=1.8.0",
  "tensorflow>=2.21.0",
  "torch>=2.12.0",
  "torchvision>=0.27.0",
]

